[gd_scene load_steps=8 format=3 uid="uid://l6stmnql0rim"]

[ext_resource type="Script" path="res://src/ui/main_menu.gd" id="1_5vwaj"]
[ext_resource type="Theme" uid="uid://bvl8bwpd1nryk" path="res://main_menu.tres" id="2_0doh3"]
[ext_resource type="PackedScene" uid="uid://csgdtb8pbgwjj" path="res://src/object/shield/shield00.tscn" id="2_qpg2t"]
[ext_resource type="PackedScene" uid="uid://bdcr8aj5rbgm3" path="res://src/environment/day_night.tscn" id="3_ynbn5"]
[ext_resource type="Script" path="res://camera_3d.gd" id="4_1pwih"]
[ext_resource type="Texture2D" uid="uid://bhigegemvbhwj" path="res://texture/menu/sand-game-title.png" id="4_8yi4g"]
[ext_resource type="AudioStream" uid="uid://b0hhv7mqeh5t6" path="res://audio/this isn't a beach, this is a desert!.mp3" id="4_jhcwb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5vwaj")

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="Title"]
layout_mode = 2
texture = ExtResource("4_8yi4g")

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -146.0
offset_right = 175.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_0doh3")

[node name="MCStart" type="MarginContainer" parent="MenuButtons"]
layout_mode = 2

[node name="Start" type="Button" parent="MenuButtons/MCStart"]
layout_mode = 2
text = "start"

[node name="MCSkybox" type="MarginContainer" parent="MenuButtons"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Skybox" type="Button" parent="MenuButtons/MCSkybox"]
layout_mode = 2
text = "skybox"

[node name="MenuScene3D" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="MenuScene3D"]
transform = Transform3D(1, 0, 0, 0, 0.907558, -0.419927, 0, 0.419927, 0.907558, 0, -0.468633, 2)
script = ExtResource("4_1pwih")

[node name="menuMusic" type="AudioStreamPlayer3D" parent="MenuScene3D/Camera3D"]
stream = ExtResource("4_jhcwb")

[node name="Shield" parent="MenuScene3D" instance=ExtResource("2_qpg2t")]
transform = Transform3D(-2, 1.00288e-07, -1.43224e-07, 0, 1.63831, 1.14715, 1.74846e-07, 1.14716, -1.6383, 0, 0.68789, 0.0811507)
gravity = 0.0

[node name="Environment" parent="MenuScene3D" instance=ExtResource("3_ynbn5")]
day_time = 17.5
clouds_cutoff = 0.75
time_scale = 0.05
moon_base_enegry = 0.3

[node name="SpotLight3D" type="SpotLight3D" parent="MenuScene3D"]
transform = Transform3D(1, 0, 0, 0, 0.819152, -0.573576, 0, 0.573576, 0.819152, 0, -1.3236, 3.29256)
visible = false
light_color = Color(0.961352, 0.426769, 0.523916, 1)
light_energy = 0.5
light_specular = 1.0

[connection signal="pressed" from="MenuButtons/MCStart/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuButtons/MCSkybox/Skybox" to="." method="_on_skybox_pressed"]
